online games section complete

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,9 @@ body {
 }
 
 /* nav style start */
+header{
+    margin-bottom: 140px;
+}
 .nav-content {
     width: 80vw;
     margin: 0 auto;
@@ -47,7 +50,7 @@ p {
     align-items: center;
 }
 
-.nav-menu ul li {
+.nav-menu ul > li {
     list-style: none;
     margin-right: 23px;
 }
@@ -66,6 +69,9 @@ p {
     border-radius: 8px;
     background: rgba(11, 2, 35, 0.10);
     padding: 5px 10px;
+}
+.nav-icon  li{
+    list-style: none;
 }
 
 .nav-icon img {
@@ -96,7 +102,7 @@ img {
     font-weight: 800;
 }
 
-.banner-content p {
+.primary-p-color {
     color: #534C64;
     font-size: 18px;
     font-weight: 500;
@@ -117,7 +123,7 @@ img {
 #go-rogue-btn{
     border-radius: 48px;
     padding: 15px 40px;
-    background-color: #4EC5F7;;
+    background-color: #4EC5F7;
     color: #ffff;
     border: none;
     margin-top: 10px;
@@ -125,7 +131,7 @@ img {
     font-weight: 600;
     cursor: pointer;
 }
-.primary-text-color{
+.gradient-color{
     background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
     color: transparent;
     -webkit-background-clip: text;
@@ -137,4 +143,66 @@ img {
 
 .banner-img img {
     width: 100%;
+}
+/* online games style */
+.online-games{
+    width: 80vw;
+    margin: 0 auto;
+}
+.online-title-text{
+    text-align: center;
+    margin-bottom: 30px;
+}
+.online-title-text h1{
+    font-size: 48px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.online-games-box-container{
+    display: flex;
+    gap: 24px;
+}
+.single-games-box{
+    width: 18vw;
+    position:relative;
+}
+.box-color{
+    width: 18vw;
+    height: 287px;
+    position: absolute;
+    bottom: 5px;
+    border-radius: 10px;
+    display: none;
+}
+.play-btn{
+    position: absolute;
+    bottom: 117px;
+    left: 79px;
+    text-align: center;
+    display: none
+}
+.single-games-box:hover .box-color{
+    background-color:#0000008a;
+    z-index: 3;
+    display:block;
+}
+.single-games-box:hover .play-btn{
+    display: block;
+    z-index: 4;
+}
+.single-games-box > img{
+    width: 100%;
+    z-index: 2;
+}
+.play-icon img {
+    width: 10px;
+}
+.single-games-box .play-icon{
+    position: relative;
+    bottom: 154px;
+    left: 101px;
+    display: none;
+}
+.single-games-box:hover .play-icon{
+    display: block;
 }
